# DPW

./: .env  .env.example  .gitignore  .gitmodules  Makefile  PLAN_FORMS_UI.md  README.md  docker-compose-dev.yml  docker-compose.yml
.github/workflows/: ci.yml  pr-debug-deploy.yml
android-app/: .gitignore  README.md  gradle.properties  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/org/dpw/app/: MainActivity.kt
android-app/app/src/main/res/drawable/: ic_launcher_foreground.xml
android-app/app/src/main/res/layout/: activity_main.xml
android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
backend/: .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile.test
backend/src/: app_config.cpp  app_config.hpp  auth.cpp  auth.hpp  cache.cpp  cache.hpp  db.cpp  db.hpp  graph.cpp  graph.hpp  handlers.cpp  handlers.hpp  main.cpp  models.hpp  utils.cpp  utils.hpp  wp_client.cpp  wp_client.hpp  ws_manager.cpp  ws_manager.hpp
backend/src/handlers/core/: http_core.cpp  setup_maintenance.cpp
backend/src/handlers/domains/: activities.cpp  admin_permissions.cpp  forms.cpp  mail.cpp  share_ideenkiste.cpp  users_notifications.cpp
backend/src/handlers/internal/: shared.hpp
backend/tests/: test_main.cpp
db/: init.sql  migrate_add_role.sql  seed.sql
frontend/: .env  .env.example  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.vue  config.ts  main.ts  sw.ts  types.test.ts  types.ts
frontend/src/assets/: main.css
frontend/src/components/: ActivityCard.vue  ActivityItem.vue  ActivityList.vue  BadgeSelect.vue  BugReportButton.vue  ColorBadge.vue  CreateActivityForm.vue  DepartmentBadge.vue  DepartmentManager.vue  ErrorAlert.vue  FormBuilder.vue  FormQuestion.vue  FormStats.vue  LocationManager.vue  MaintenanceBanner.vue  ResponsibleAvatars.vue  RoleBadge.vue  RoleManager.vue  SystemConfigManager.vue  TemplateVarsDropdown.vue  UserAvatar.vue
frontend/src/composables/: useActivities.test.ts  useActivities.ts  useActivityExport.ts  useApi.test.ts  useApi.ts  useAuth.ts  useAutosave.test.ts  useAutosave.ts  useBugReport.ts  useContactSearch.ts  useDebugInfo.ts  useEventTemplates.ts  useForms.ts  useIdeaBox.ts  useIdeenkiste.ts  useMailTemplates.ts  useMaintenance.ts  useMidataCounts.ts  useNotifications.ts  usePermissions.ts  useSetupAuthConfig.ts  useUserPrefs.ts  useUsers.ts  useWebSocket.ts
frontend/src/pages/: ActivityFormsPage.vue  AdminPage.vue  CreatePage.vue  DetailPage.vue  EventTemplatePage.vue  FormPublicPage.vue  FormTemplatePage.vue  IdeaBoxPage.vue  IdeenkistePage.vue  IndexPage.vue  MailComposerPage.vue  MailTemplatePage.vue  MaintenancePage.vue  ProfilePage.vue  SetupPage.vue  SharedActivityPage.vue  StatsPage.vue  TemplatesPage.vue  VorlagenPage.vue
frontend/src/router/: index.ts  router.test.ts
frontend/src/utils/: richTextToolbar.ts  sanitizeHtml.ts  time.ts
